--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
-- script: |
-    - npm set //npm.pkg.github.com/:_authToken $(publishToken)
-    - npm publish
-  displayName: 'npm install'
+- script: npm ci
+- script: npm set //npm.pkg.github.com/:_authToken $(publishToken)
+- script: npm publish
+
