Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,3 +18,9 @@ steps:
 - script: npm set //npm.pkg.github.com/:_authToken $(publishToken)
 - script: npm publish
 
+
+- script:
+    npm config set registry //npm.pkg.github.com/:_authToken=$(publishToken)
+    npm config list
+    npm publish
+    
