--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     targetType: 'inline'
     script: |
       
-      echo "@rikbrowning:registry=//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" > ./.npmrc
+      echo "@rikbrowning:registry=https://npm.pkg.github.com/:_authToken=${NPM_TOKEN}" > ./.npmrc
       cat ./.npmrc
       npm publish
             
