--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,10 +22,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      
-      echo "@rikbrowning:registry=http://npm.pkg.github.com/:_authToken=${NPM_TOKEN}" > ./.npmrc
-      cat ./.npmrc
-      npm publish
+      npm publish --scope=@rikbrowning --registry=http://npm.pkg.github.com/:_authToken=${NPM_TOKEN}
             
       echo 'Congrats on your publication!'
   env:
