Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      npm publish
+      npm publish --access public
             
       echo 'Congrats on your publication!'
   env:
