--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,7 @@
 
 name: CI
 
-on:
-  push:
-    branches:
-     - 'main'
-     - 'feature/**'
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 
 env:
