local npm version required #1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,17 +6,13 @@ name: CI
 on: 
   push:
   pull_request:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version'
-        required: true
 
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  VERSION: ${{ github.event.inputs.version }}
+  CI_USER: ${{ secrets.YOUR_GITHUB_USER }}
+  CI_EMAIL: ${{ secrets.YOUR_GITHUB_EMAIL }}
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -57,7 +53,7 @@ jobs:
   release:
     needs: [lint, build]
     runs-on: ubuntu-latest 
-    if: github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'push' && startswith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
@@ -66,10 +62,9 @@ jobs:
             node_modules
             **/node_modules
           key: ${{ runner.os }}-${{ hashFiles('./package-lock.json') }}
-      - run: git config --global user.email "rikyb88@gmail.com"
-      - run: git config --global user.name "Rik Browning"
-      - name: NPM version
-        run: npm version $VERSION -m 'chore(release) version %s'
+      - run: git config --global user.email "$CI_EMAIL"
+      - run: git config --global user.name "$CI_EMAIL"
+      - run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: NPM publish
         run: npm publish --access public
@@ -78,8 +73,6 @@ jobs:
       - name: Create Change Log
         id: github_release
         uses: mikepenz/release-changelog-builder-action@v2.1.1
-        with:
-          commitMode: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
