Trying to get changelog to generate.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  CI_USER: ${{ secrets.YOUR_GITHUB_USER }}
-  CI_EMAIL: ${{ secrets.YOUR_GITHUB_EMAIL }}
+  CI_USER: ${{ secrets.CI_USER}}
+  CI_EMAIL: ${{ secrets.CI_EMAIL }}
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -71,6 +71,8 @@ jobs:
       - name: Create Change Log
         id: github_release
         uses: mikepenz/release-changelog-builder-action@v2.1.1
+        with:
+          configuration: "config.json"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
