--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a test package for testing",
   "main": "index.js",
   "scripts": {
-    "release": "node ./scripts/release.js"
+    "release": "node ./scripts/release.js",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,11 @@
   },
   "homepage": "https://github.com/rikbrowning/test-package#readme",
   "devDependencies": {
+    "husky": "^7.0.0",
     "shelljs": "^0.8.4"
+  },
+  "dependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0"
   }
 }
