--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,10 +52,19 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
+      - name: Run CI
+        run: npm ci
       - name: Run Build
         run: npm run build --if-present
-      - name: Completed Build
-        run: echo "HOORRAAYYY!!"
+      - name: run test
+        run: npm run test
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()    # run this step even if previous step failed
+        with:
+          name: JEST Tests            # Name of the check run which will be created
+          path: ./junit.xml    # Path to test results
+          reporter: jest-junit        # Format of test results
   release:
     needs: [lint, build]
     runs-on: ubuntu-latest 
